# spiking-neural-networks

./: .gitignore  Cargo.toml  README.md  TODO.md  aqif.toml  args.toml  coupled.toml  docs_backend.md  docs_gpu.md  docs_interface.md  eeg_like.toml  ga.toml  izhikevich_stdp.toml  lattice.toml  notes.md  stdp_lattice.toml  stdp_neuro.toml  stdp_neuro_only.toml
archive_interface/: Cargo.toml  requirements.txt
archive_interface/python_examples/: hodgkin_huxley_iterate_test.py  izhikevich_iterate_test.py
archive_interface/src/correlation/: mod.rs
archive_interface/src/py_interface/: mod.rs
backend/: Cargo.toml  EEG-1.csv  README.md  aqif.toml  coupled_hodgkin_huxley.toml  docs.md  hodgkin_huxley.toml  hodgkin_huxley_voltage.toml  stdp_lattice.toml
backend/args/: calcium.toml  coupled_hodgkin_huxley.toml  current_coupled_test.toml  eeg_lattice.toml  fitting_test.toml  hopfield.toml  hopfield_larger.toml  lattice.toml  new_static_input_test.toml  pattern.txt  peaks.toml  poisson_test.toml  stdp_current.toml  stdp_gap_junction.toml  stdp_lattice.toml
backend/benches/graph_bench/: main.rs
backend/benches/neuron_bench/: main.rs
backend/benches/par_bench/: main.rs
backend/examples/bcm/: main.rs
backend/examples/fitzhugh_nagumo_example/: main.rs
backend/examples/gpu_lattice/: main.rs
backend/examples/gpu_test/: main.rs
backend/examples/hodgkin_huxley/: main.rs
backend/examples/hodgkin_huxley_example/: main.rs
backend/examples/hopfield/: main.rs  pattern1.txt
backend/examples/hopfield_example/: main.rs  pattern2.txt
backend/examples/interacting_pools/: main.rs
backend/examples/izhikevich/: main.rs
backend/examples/izhikevich_example/: main.rs
backend/examples/lattice/: main.rs
backend/examples/lattice_example/: main.rs
backend/examples/lattice_network/: main.rs
backend/examples/lattice_network_example/: main.rs
backend/examples/lif_neuron_builder/: main.rs
backend/examples/lsm_architecture/: main.rs
backend/examples/lsm_architecture_example/: main.rs
backend/examples/morris_lecar/: main.rs
backend/examples/neuro/: main.rs
backend/examples/r-stdp/: main.rs
backend/examples/rstdp_example/: main.rs
backend/examples/rstdp_lattice/: main.rs
backend/examples/rstdp_lattice_example/: main.rs
backend/examples/stdp/: main.rs
backend/examples/stdp_example/: main.rs  stdp_testing.rs
backend/results/: results.md
backend/src/: lib.rs  main.rs
backend/src/correlation/: mod.rs
backend/src/distribution/: mod.rs
backend/src/eeg/: mod.rs
backend/src/error/: mod.rs
backend/src/fitting/: mod.rs
backend/src/ga/: mod.rs
backend/src/graph/: mod.rs
backend/src/interactable/: mod.rs
backend/src/neuron/: integrate_and_fire.rs  mod.rs
backend/src/reinforcement/: mod.rs
backend/test/gpu_electrical_accuracy/: lib.rs
backend/test/neuron_conversion/: lib.rs
backend/test/neurotransmitter_conversion/: lib.rs
backend/tests/: check_gpu_lattice_network_source.rs  checking_program_source.rs  gpu_accuracy.rs  gpu_connection_behavior.rs  grid_formation_invariant.rs  interleaving_graph_conversion.rs  ligand_gates_conversion.rs  neuron_conversion.rs  neurotransmitter_conversion.rs  rate_spike_train.rs  rate_spike_train_lattices.rs  size_zero_cases.rs  spike_train_conversion.rs  spike_train_neuron_interaction.rs  spike_train_program_source.rs
build_test/nb_macro/: Cargo.toml  notes.md  reserved_keywords.md
build_test/nb_macro/mandatory_vars_tests/: Cargo.toml  pyproject.toml
build_test/nb_macro/src/: lib.rs  main.rs
build_test/nb_macro/tests/: basic_ion_channel.rs  basic_lif.rs  basic_lif_from_file.rs  bool_vars.rs  delta_dirac_refractoriness.rs  dopamine_testing.rs  duplicate_variables.rs  function_usage.rs  gating_variables_ion_channel.rs  gpu_basic_lif.rs  gpu_custom_electrochemical.rs  gpu_delta_dirac_refractoriness.rs  gpu_if_statements.rs  gpu_ion_channel.rs  gpu_ion_channel_custom_electrochemical.rs  gpu_ion_channel_neuron_integration.rs  gpu_ion_channel_with_gating_vars.rs  gpu_izhikevich_dopamine.rs  gpu_neurotransmitter_kinetics.rs  gpu_rate_spike_train.rs  gpu_receptor_kinetics.rs  gpu_receptors.rs  hodgkin_huxley.rs  if_statements.rs  ion_channel_based_neuron.rs  ionotropic_channels.rs  ionotropic_channels_testing.rs  izhikevich_attractor.rs  izhikevich_dopamine.rs  izhikevich_testing.rs  kinetics.rs  kinetics_default_impl.rs  lif.nb  lif_reference.rs  mandatory_vars_defaults.rs  morris_lecar.rs  neuron_receptor_integration.rs  neurotransmitter_kinetics.rs  preset_spike_train.rs  py_basic_methods.rs  (+5 more)
build_test/nb_macro/tests_gpu_py/: Cargo.toml  pyproject.toml
build_test/nb_macro/tests_py/: Cargo.toml  pyproject.toml
interface/: Cargo.toml  docs.md  pyproject.toml  requirements.txt  temp_build.rs
interface/.github/workflows/: CI.yml
interface/examples/: binary_autoassociative_network.py  hd_model.py  inh_exc.py  raster.py  schizophrenic_synaptic_pruning.py
interface/experiments/: README.md  attractor_manifold_generation.py  attractor_manifold_plot.py  bayesian_inference_pipeline.py  dopamine_liquid_interaction.py  gaba_glu_no_input_noisy_cue.toml  gaba_glu_with_recall_cue.toml  gain_modulation.md  gmax_no_input_noisy_cue.toml  gmax_with_recall_cue.toml  grti_no_input_noisy_cue.toml  grti_with_and_without_cue.toml  grti_with_recall_cue.toml  heuristic_parameter_search.py  isolated_liquid_pipeline.py  liquid_custom_manifold_generation.py  liquid_manifold_generation.py  lsm_setup.py  manifold_generation.py  pipeline_setup.py  schizophrenia_simulation_pipeline.py  tolman_eichenbaum.py  training_liquid_pipeline.py  untrained_liquid_manifold_generation.py
interface/experiments/bayesian_inf_args/: d2_inh_vary_glu_gaba_cc.toml  d2_inh_vary_glu_gaba_cc_with_weights.toml  d2_inh_vary_glu_gaba_cc_with_weights_phases.toml  d2_inh_vary_glu_gaba_cc_with_weights_phases_inh_stronger.toml  d2_inh_vary_gmax_with_weights - Copy.toml  d2_inh_vary_gmax_with_weights.toml  test.toml  (+24 more)
interface/python_examples/: iterate_test.py
interface/src/: ast.pest  lib.rs
interface_gpu/lixirnet/: .gitignore  Cargo.toml  pyproject.toml
(+156 files in other folders)
