[package]
name = "lixirnet"
version = "0.1.0"
edition = "2021"

[lib]
name = "lixirnet"
crate-type = ["cdylib"]

[dependencies]
csv = "1.2.2"
exprtk_rs = "0.1.0"
ndarray = "0.15.6"
num-complex = "0.4.4"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.8.0"
rustfft = "6.1.0"
serde = "1.0.192"
serde_json = "1.0.108"
# toml = "0.7.8"
pyo3 = { version = "0.20.0", features = ["extension-module"] }

