[package]
name = "spiking_neural_networks"
version = "0.9.0"
edition = "2021"
license = "Apache-2.0"
description = "A package for designing and simulating biological neural network dynamics with neurotransmission"
repository = "https://github.com/NikhilMukraj/spiking-neural-networks"
keywords = ["neuron", "neurons", "neuroscience", "neurotransmission", "neurotransmitter"]
categories = ["science::neuroscience"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# csv = "1.2.2"
# toml = "0.7.8"
ndarray = "0.15.6"
num-complex = "0.4.4"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.8.0"
rustfft = "6.1.0"
serde = "1.0.192"
serde_json = "1.0.108"
iterate_and_spike_traits = { path = "src/neuron/iterate_and_spike_traits" }

# [dev-dependencies]
# ratatui = "0.26.3"

[lib]
name = "spiking_neural_networks"
path = "src/lib.rs"
