[package]
name = "lixirnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lixirnet"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.3", features = ["multiple-pymethods"] }
spiking_neural_networks = "0.22.0"
