[package]
name = "lixirnet"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lixirnet"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.3"
opencl3 = "0.9.5"
nb_macro = { path = "../../build_test/nb_macro", default-features = false, features = ["py", "gpu"] }
spiking_neural_networks = { path = "../../backend", features = ["gpu"] }

[dev-dependencies]
rand = "0.8.3"
rand_chacha = "0.3.1"
