[package]
name = "tests_gpu_py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tests_gpu_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.3"
opencl3 = "0.9.5"
nb_macro = { path = "../", default-features = false, features = ["py", "gpu"] }
spiking_neural_networks = { path = "../../../backend", features = ["gpu"] }
