[package]
name = "iterate_and_spike_traits"
version = "0.6.1"
edition = "2021"
license = "Apache-2.0"
description = "A set of macros for a spiking neural network package"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1.0"

[lib]
proc-macro = true
