[package]
name = "iterate_and_spike_traits"
version = "0.7.0"
edition = "2021"
license = "Apache-2.0"
description = "A set of macros for a spiking neural network package"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1.0"

lazy_static = { version = "1.4.0", optional = true }
pest = { version = "2.6", optional = true }
pest_derive = { version = "2.6", optional = true }
regex = { version = "1.10.6", optional = true }

[lib]
proc-macro = true

[features]
neuron_builder = ["dep:lazy_static", "dep:pest", "dep:pest_derive", "dep:regex"]
